syntax = "proto3";

option csharp_namespace = "GrpcMongoMessagingService";

package messaging;

service MongoMessagingService {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
    rpc RetrieveMessages(RetrieveMessagesRequest) returns (RetrieveMessagesResponse);
    rpc RetrieveUnreadMessages(RetrieveUnreadMessagesRequest) returns (RetrieveUnreadMessagesResponse);
    rpc MarkMessageAsRead(MarkMessageAsReadRequest) returns (MarkMessageAsReadResponse);
    rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
    rpc EditMessage(EditMessageRequest) returns (EditMessageResponse);
}

// Requests
message SendMessageRequest {
    string senderId = 1;
    string receiverId = 2;
    string content = 3;
}

message RetrieveMessagesRequest {
    string userId1 = 1; // First user ID (could be sender or receiver)
    string userId2 = 2; // Second user ID (could be sender or receiver)
}

message RetrieveUnreadMessagesRequest {
    string userId = 1;  // The user retrieving unread messages
    string friendId = 2; // The friend from whom they want to retrieve messages
}

message MarkMessageAsReadRequest {
    repeated string messageIds = 1; // List of message IDs to mark as read
}

message DeleteMessageRequest {
    string messageId = 1;
}

message EditMessageRequest {
    string messageId = 1;
    string newContent = 2;
}

// Responses
message SendMessageResponse {
    string messageId = 1;
    string status = 2;
}

message RetrieveMessagesResponse {
    repeated Message messages = 1; // A list of messages
}

message RetrieveUnreadMessagesResponse {
    repeated Message messages = 1; // A list of unread messages
}

message MarkMessageAsReadResponse {
    string status = 1;
}

message DeleteMessageResponse {
    string status = 1;
}

message EditMessageResponse {
    string status = 1;
    Message editedMessage = 2; // Return the edited message as well
}

// Message object to represent a chat message in the system
message Message {
    string messageId = 1;
    string senderId = 2;
    string receiverId = 3;
    string content = 4;
    string timestamp = 5;  // Use int64 to represent a Unix timestamp
    bool isRead = 6;
}
